objects/OppProduct__c.object
<CustomObject>
    <description>testing custom opportunity product object</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>testing custom opportunity product</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>OppProducts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <defaultValue>&quot;Ignore&quot;</defaultValue>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>OppProducts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>OppProduct</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OppProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>